--- a/package.json
+++ b/package.json
@@ -1,35 +1,50 @@
 {
-  "name": "generate-package-json-webpack-plugin",
-  "version": "2.6.0",
-  "description": "Generates a package.json file containing the external modules used by your webpack bundle",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "cut-patch-release": "npm version patch && git push --follow-tags && npm publish",
-    "cut-minor-release": "npm version minor && git push --follow-tags && npm publish",
-    "cut-major-release": "npm version major && git push --follow-tags && npm publish"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lostpebble/generate-package-json-webpack-plugin.git"
-  },
-  "keywords": [
-    "webpack",
-    "plugin",
-    "package.json",
-    "node",
-    "modules"
-  ],
-  "author": "Paul Myburgh",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/lostpebble/generate-package-json-webpack-plugin/issues"
-  },
-  "homepage": "https://github.com/lostpebble/generate-package-json-webpack-plugin#readme",
-  "devDependencies": {
-    "@types/webpack": "^4.41.17",
-    "cross-env": "^5.0.1",
-    "webpack": "5.52.0"
-  }
+    "name": "generate-package-json-webpack-plugin",
+    "version": "2.6.0",
+    "description": "Generates a package.json file containing the external modules used by your webpack bundle",
+    "keywords": [
+        "webpack",
+        "plugin",
+        "package.json",
+        "node",
+        "modules"
+    ],
+    "author": "Paul Myburgh",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/lostpebble/generate-package-json-webpack-plugin/issues"
+    },
+    "homepage": "https://github.com/lostpebble/generate-package-json-webpack-plugin#readme",
+    "main": "dist/index.cjs.js",
+    "module": "dist/index.esm.js",
+    "module.esnext": "dist/esnext.esm.js",
+    "types": "dist/@types/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "build": "rm -rf dist && NODE_ENV=production && rollup -c --bundleConfigAsCjs",
+        "format": "prettier --write \"src/**/*.ts\"",
+        "lint": "eslint --fix --quiet --ext .ts ./"
+    },
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "^24.1.0",
+        "@rollup/plugin-node-resolve": "^15.0.2",
+        "@rollup/plugin-typescript": "^11.1.0",
+        "@types/node": "^20.2.5",
+        "@types/react": "^18.2.0",
+        "@types/react-transition-group": "^4.4.5",
+        "@typescript-eslint/eslint-plugin": "^5.59.2",
+        "@typescript-eslint/parser": "^5.59.2",
+        "eslint": "^8.39.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
+        "lint-staged": "^13.2.2",
+        "prettier": "^2.8.8",
+        "rollup": "^3.21.2",
+        "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-terser": "^7.0.2",
+        "typescript": "^5.0.4",
+        "webpack": ">=5.0.0"
+    }
 }
